--- a/TextToSpeech/TextToSpeech/Speech_to_text.vcxproj
+++ b/TextToSpeech/TextToSpeech/Speech_to_text.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Speechtotext</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>TextToSpeech</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -147,7 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Speech_to_text.cpp" />
+    <ClCompile Include="text_to_speech.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h" />
